--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -17,7 +17,10 @@
             "internalConsoleOptions": "openOnSessionStart",
             "env": {
                 "ASPNETCORE_ENVIRONMENT": "Development",
-                "MY_ENV_VARIABLE": "HereIsValue"
+                "MY_ENV_VARIABLE_STRING": "HereIsValue",
+                "MY_ENV_VARIABLE_INT": "123",
+                "MY_ENV_VARIABLE_BOOL": "true",
+                "MY_ENV_VARIABLE_DOUBLE": "1.213323"
             }
         },
         {
