--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -20,7 +20,9 @@
                 "MY_ENV_STRING": "HereIsValue",
                 "MY_ENV_INT": "123",
                 "MY_ENV_BOOL": "true",
-                "MY_ENV_DOUBLE": "1.213323"
+                "MY_ENV_DOUBLE": "1.213323",
+                "MY_ENV_STRING_ARRAY": "asf,asfasf,asfa",
+                "MY_ENV_INT_ARRAY": "1,2,4,8"
             }
         },
         {
